# Automation

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  taks_manager.py  tasks.json
testing/: __init__.py  test_generate_log.py
